--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Flow</title>
-    <link rel="icon" type="image/svg+xml" href="../public/logo.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/public/logo.svg"/>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700&display=swap');
     </style>
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="/public/styles/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="ubuntu-light">
     <div class="container-fluid">
-        <form class="mx-auto" id="forms">
+        <form class="mx-auto" id="forms" method="POST" action="/login">
             <h4 class="text-center">Login</h4>
             <div class="mb-3 mt-5">
               <label for="exampleInputEmail1" class="form-label">E-mail</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" oninput="validarCampos()">
+              <input type="email" class="form-control" id="exampleInputEmail1" name="email" required oninput="validarCampos()">
             </div>
             <div class="mb-3">
               <label for="senha" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="senha" oninput="validarCampos()">
+              <input type="password" class="form-control" id="senha" name="senha" required oninput="validarCampos()">
               <div id="emailHelp" class="form-text">
                 <button type="button" id="recuperarSenha" disabled="true">Esqueci a senha</button>
               </div>
@@ -30,16 +30,14 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Salvar senha</label>
             </div>
-            <button type="button" class="btn btn-success" disabled ="true" id="login">Entrar</button>
-            <button  class="btn btn-secondary mt-2" >Registrar</button>
+            <button type="button" class="btn btn-success" disabled="true" id="login">Entrar</button>
+            <a href="/registro" class="btn btn-secondary mt-2">Registrar</a>
             <div>
               <h1 class="erros"></h1>
             </div>
           </form>
-          
     </div>
 
-          <script src="../assets/login.js">
-      </script>
+    <script src="/public/scripts/login.js"></script>
 </body>
 </html>
