--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -10,7 +10,7 @@
 </head>
 <body class="ubuntu-light">
     <div class="container-fluid">
-        <form class="mx-auto" id="forms" method="POST" action="/registro">
+        <form class="mx-auto" id="forms" method="POST" action="/login">
             <h4 class="text-center">Registro</h4>
             <div class="mb-3 mt-5">
               <label for="nameInput" class="form-label">Nome Completo</label>
