--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,14 +26,10 @@
                 <button type="button" id="recuperarSenha">Esqueci a senha</button>
               </div>
             </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Salvar senha</label>
-            </div>
             <button type="submit" class="btn btn-success" id="login">Entrar</button>
             <a href="/registro" class="btn btn-secondary mt-2">Registrar</a>
             <div>
-              <h1 class="erros"></h1>
+              <h1 class="erros" id="erros"></h1>
             </div>
           </form>
     </div>
