--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -26,7 +26,7 @@
             </div>
             <button type="submit" class="btn btn-success" id="criar">Criar Conta</button>
             <div>
-              <h1 class="erros"></h1>
+              <h1 class="erros" id="erros"></h1>
             </div>
           </form>
     </div>
