adicionado pagina principal
adicionando pagina principal

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,8 +24,8 @@
             <li><a href="#sobre">Sobre nós</a></li>
         </ul>
         <div>
-            <a href="#" class="login-btn">Login</a>
-            <a href="#" class="cadastro-btn">Cadastro</a>
+            <a href="/login" class="login-btn">Login</a>
+            <a href="/registro" class="cadastro-btn">Cadastro</a>
         </div>
     </nav>
     <div class="content">
