--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 </head>
 <body class="ubuntu-light">
     <div class="container-fluid">
-        <form class="mx-auto" id="forms" method="POST" action="/home">
+        <form class="mx-auto" id="forms" method="POST" action="/taskflow">
             <h4 class="text-center">Login</h4>
             <div class="mb-3 mt-5">
               <label for="exampleInputEmail1" class="form-label">E-mail</label>
