--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Flow</title>
+    <title>Task Flow - Login</title>
     <link rel="icon" type="image/svg+xml" href="/public/logo.svg"/>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700&display=swap');
