atualizando pagina de board

--- a/views/taskflow.html
+++ b/views/taskflow.html
@@ -20,11 +20,11 @@
                 <span>Adicionar novo quadro</span> 
                 <span class="add-icon">+</span>
             </button>
-            <!-- Novo input para criar o quadro -->
+            <!-- Novo input inicialmente oculto -->
             <input 
                 type="text" 
-                class="board-name-input" 
-                placeholder="Digite o nome do quadro"
+                class="board-name-input hidden" 
+                placeholder="Digite o nome do quadro e pressione Enter"
             />
         </div>
     </div>
