começando backend pagina inicial
começando backend pagina inicial

--- a/views/taskflow.ejs
+++ b/views/taskflow.ejs
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div class="main-content">
+    <div class="main-content hidden">
         <div class="top-bar">
             <div class="selected-board-name"></div>
             <button class="add_btn" onclick="openModal()">
@@ -125,7 +125,7 @@
             <button class="primary" onclick="updateTask()" id="editingModeBtn">Salvar alterações</button>
           </div>
         </div>
-    <script src="..//public/scripts/moment.min.js"></script>
+    <script src="../public/scripts/moment.min.js"></script>
     <script src="../public/scripts/taskflow.js"></script>
-</body>
+</body> 
 </html>
